--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
             <div class="l-box">
                 <h3>To Download:</h3>
                 <ul id="listing"></ul>
+                <!--Add the files that will be downloaded here as a list-->
             </div>
         </div>
     </div>
