--- a/show.html
+++ b/show.html
@@ -6,21 +6,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>List of Playlists</title>
+    <link rel="icon" href="/ytdiff/assets/favicon.ico">
+    <link href="/ytdiff/assets/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+    <script src="/ytdiff/assets/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+    <style>
+        .list-group {
+            max-height: 80vmin;
+            overflow-y: scroll;
+            padding-bottom: 15px;
+        }
+    </style>
 </head>
 
 <body>
     <nav class="mt-0 pt-0 mb-0 pb-0 navbar navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <!--<img src="nav.svg" alt="" width="30" height="24"
-                    class="d-inline-block align-text-top">-->
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 5 40 40" width="30px" height="24px">
-                    <path fill="#FF3D00"
-                        d="M43.2,33.9c-0.4,2.1-2.1,3.7-4.2,4c-3.3,0.5-8.8,1.1-15,1.1c-6.1,0-11.6-0.6-15-1.1c-2.1-0.3-3.8-1.9-4.2-4C4.4,31.6,4,28.2,4,24c0-4.2,0.4-7.6,0.8-9.9c0.4-2.1,2.1-3.7,4.2-4C12.3,9.6,17.8,9,24,9c6.2,0,11.6,0.6,15,1.1c2.1,0.3,3.8,1.9,4.2,4c0.4,2.3,0.9,5.7,0.9,9.9C44,28.2,43.6,31.6,43.2,33.9z" />
-                    <path fill="#FFF" d="M20 31L20 17 32 24z" />
-                </svg><span>-diff</span>
+                <img src="/ytdiff/assets/favicon.ico" alt="" width="30" height="30"
+                    class="d-inline-block align-text-top"><span>-diff</span>
             </a>
-            <a href="http://localhost:8888/ytdiff/showdb" class="link-warning">See DB</a>
+            <a href="http://localhost:8888/ytdiff" class="link-warning">Back</a>
         </div>
     </nav>
 
