--- a/show.html
+++ b/show.html
@@ -9,6 +9,9 @@
     <link rel="icon" href="/ytdiff/assets/favicon.ico">
     <link href="/ytdiff/assets/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
     <script src="/ytdiff/assets/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.socket.io/4.5.3/socket.io.min.js"
+        integrity="sha384-WPFUvHkB1aHA5TDSZi6xtDgkF0wXJcIIxXhC6h8OT8EH3fC5PWro5pWJ1THjcfEi"
+        crossorigin="anonymous"></script>
     <style>
         .list-group {
             max-height: 80vmin;
@@ -31,15 +34,15 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <h3>list_of_play_lists:</h3>
+                <h3>List of Playlists:</h3>
                 <table class="table table-responsive" id="placeholder">
                     <thead>
                         <tr>
-                            <th scope="col">id</th>
-                            <th scope="col">url</th>
-                            <th scope="col">createdAt</th>
-                            <th scope="col">updatedAt</th>
-                            <th scope="col">more</th>
+                            <th scope="col">ID</th>
+                            <th scope="col">Title</th>
+                            <th scope="col">CreatedAt</th>
+                            <th scope="col">UpdatedAt</th>
+                            <th scope="col">Expand</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -66,6 +69,7 @@
                         it might also need a limiter and functionality to 
                         go back and forth between pages, chaching maybe.
                     -->
+
                 </div>
             </div>
         </div>
@@ -80,6 +84,21 @@
                 document.getElementById("stop").value = 10;
             }
             populateList();
+            sockSetup();
+        }
+        function sockSetup() {
+            console.log("Sock setup started");
+            var socket = io();
+            socket.on('init', function (data) {
+                console.log(data.message);
+                // Respond with a message including this clients' id sent from the server
+                socket.emit('acknowledge', { data: 'Connected', id: data.id });
+            });
+            socket.on('progress', function (data) {
+                pbar.setAttribute("value", data.progress);
+            });
+            socket.on('error', console.error.bind(console));
+            socket.on('message', console.log.bind(console));
         }
         function next() {
             depopulateList();
@@ -149,13 +168,13 @@
                     const show = row.insertCell(4);
 
                     id.innerHTML = element.order_added;
-                    url.innerHTML = element.url;
+                    url.innerHTML = `<a href='${element.url}'">${element.title}</a>`;
                     //overflow-wrap: break-word;width;word-wrap: anywhere;width: 17vw;
-                    url.style.wordWrap = "anywhere";
-                    url.style.width = "17vw";
+                    //url.style.wordWrap = "anywhere";
+                    //url.style.width = "17vw";
                     createdAt.innerHTML = new Date(element.createdAt).toLocaleDateString("en-US", options);
                     updatedAt.innerHTML = new Date(element.updatedAt).toLocaleDateString("en-US", options);
-                    show.innerHTML = ""
+                    show.innerHTML = '<button type="button" class="btn btn-secondary" onclick=getSubList("' + element.url + '")>Load</button>';
                     /*
                     Add the more button that loads the list of vidoes associted with the playlist 
                     and add the download buttons here too also make sure to add the web sockets
@@ -168,7 +187,10 @@
             for (var i = 1; i < table.rows.length;) {
                 table.deleteRow(i);
             }
-        }
+        };
+        function getSubList(url) {
+            console.log(url);
+        };
 
     </script>
 
