--- a/index.html
+++ b/index.html
@@ -168,10 +168,13 @@
                 socket.emit('acknowledge', { data: 'Connected', id: data.id });
             });
             socket.on('progress', function (data) {
-                pbar.setAttribute("value", data.progress);
+                console.log(data);
             });
             socket.on('error', console.error.bind(console));
-            socket.on('message', console.log.bind(console));
+            socket.on('done', function (data) {
+                console.log(data.message);
+                alert('Downloaded: ' + `${data.message}`);
+            });
         }
     </script>
 </body>
